--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="home"><a href="#">Home</a></div>
     <div class="connections"><a href="#">Connections</a></div>
     <div class="learning"><a href="#">Learning</a></div>
-    <div class="sign-in"><a href="#">Sign In</a></div>
+    <div class="sign-in"><a href="login.html">Sign In</a></div>
     <div class="profile dropdown">
       <i class="fa-solid fa-user" style="color: #1d624e"></i>
       <span class="profile-text">Profile</span>
@@ -180,6 +180,7 @@
 
 </body>
 </html>
+
 
 
 
