--- a/signup.html
+++ b/signup.html
@@ -4,10 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Job Cloud - Sign Up</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #6a11cb, #2575fc);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .signup-container {
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      width: 100%;
+      max-width: 380px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    .signup-container h2 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+    .signup-container input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 14px;
+    }
+    .signup-container button {
+      width: 100%;
+      padding: 12px;
+      background: #2575fc;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    .signup-container button:hover {
+      background: #1a5ed1;
+    }
+    .signup-container a {
+      display: block;
+      margin-top: 12px;
+      text-decoration: none;
+      color: #2575fc;
+      font-size: 14px;
+    }
+    .signup-container a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-<body class="login-page">
-  <div class="login-container">
+<body>
+  <div class="signup-container">
     <h2>Create Your Account</h2>
     <form>
       <input type="text" placeholder="Full Name" required>
