--- a/index.html
+++ b/index.html
@@ -75,15 +75,12 @@
   <section class="job-categories">
     <h2>Find the right job or internship for you</h2>
     <div class="category-tags">
-      <span>Engineering</span><span>Business Development</span><span>Finance</span><span>Administrative Assistant</span>
-      <span>Retail Associate</span><span>Customer Service</span><span>Operations</span><span>Information Technology</span>
-      <span>Marketing</span><span>Human Resources</span><span>Healthcare Service</span><span>Sales</span>
-      <span>Program and Project Management</span><span>Accounting</span><span>Arts and Design</span>
-      <span>Community and Social Services</span><span>Consulting</span><span>Education</span>
-      <span>Entrepreneurship</span><span>Legal</span><span>Media and Communications</span>
-      <span>Military and Protective Services</span><span>Product Management</span>
-      <span>Purchasing</span><span>Quality Assurance</span><span>Real Estate</span>
-      <span>Research</span><span>Support</span><span>Administrative</span>
+      <span>Engineering</span>
+      <span>Finance</span>
+      <span>Information Technology</span>
+      <span>Marketing</span>
+      <span>Product Management</span>
+      <span>Accounting</span>
     </div>
   </section>
 
@@ -180,6 +177,8 @@
 
 </body>
 </html>
+
+
 
 
 
