--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <i class="fa-solid fa-magnifying-glass"></i> Search
         </button>
       </form>
+      <div id="jobResults" class="job-results"></div>
     </section>
   </section>
 
@@ -84,6 +85,11 @@
     </div>
   </section>
 
+  <section class="job-search">
+    <div class="job-search-container">
+    </div>
+  </section>
+  
   <section class="testimonials">
     <h2>What Our Users Say</h2>
     <div class="testimonial-cards">
@@ -129,6 +135,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
