--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
-
   <nav>
     <div class="logo">
       <img src="jobcloud12.png" alt="Job Cloud Logo" />
@@ -34,20 +33,22 @@
     <h1>Find Your Dream Job Today</h1>
     <p>Search thousands of jobs from top companies and start your career journey.</p>
     <a href="#" class="cta-btn">Get Started</a>
+
     <section class="job-posting">
+      <!-- ✅ Fixed IDs -->
       <form id="jobSearchForm" class="search-form">
-  <div class="input-group">
-    <i class="fa-solid fa-briefcase"></i>
-    <input type="text" id="companySearch" placeholder="Job Title or Company" required />
-  </div>
-  <div class="input-group">
-    <i class="fa-solid fa-location-dot"></i>
-    <input type="text" id="locationSearch" placeholder="Location (e.g., Mumbai)" />
-  </div>
-  <button type="submit" class="search-btn">
-    <i class="fa-solid fa-magnifying-glass"></i> Search
-  </button>
-</form>
+        <div class="input-group">
+          <i class="fa-solid fa-briefcase"></i>
+          <input type="text" id="companySearch" placeholder="Job Title or Company" required />
+        </div>
+        <div class="input-group">
+          <i class="fa-solid fa-location-dot"></i>
+          <input type="text" id="locationSearch" placeholder="Location (e.g., Mumbai)" />
+        </div>
+        <button type="submit" class="search-btn">
+          <i class="fa-solid fa-magnifying-glass"></i> Search
+        </button>
+      </form>
       <div id="jobResults" class="job-results"></div>
     </section>
   </section>
@@ -89,7 +90,7 @@
     <div class="job-search-container">
     </div>
   </section>
-  
+
   <section class="testimonials">
     <h2>What Our Users Say</h2>
     <div class="testimonial-cards">
@@ -135,6 +136,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
