--- a/index.html
+++ b/index.html
@@ -30,27 +30,26 @@
     </div>
   </nav>
 
-
-
-  <section class="job-posting">
-  <form id="jobSearchForm" class="search-form">
-    <div class="input-group">
-      <i class="fa-solid fa-briefcase"></i>
-      <input type="text" id="companySearch" placeholder="Job Title or Company" />
-    </div>
-    <div class="input-group">
-      <i class="fa-solid fa-location-dot"></i>
-      <input type="text" id="locationSearch" placeholder="Location (e.g., Mumbai)" />
-    </div>
-    <button type="submit" class="search-btn">
-      <i class="fa-solid fa-magnifying-glass"></i> Search
-    </button>
-  </form>
-
-  
-  <div id="jobResults" class="job-results"></div>
-</section>
-
+  <section class="hero">
+    <h1>Find Your Dream Job Today</h1>
+    <p>Search thousands of jobs from top companies and start your career journey.</p>
+    <a href="#" class="cta-btn">Get Started</a>
+    <section class="job-posting">
+      <form class="search-form">
+        <div class="input-group">
+          <i class="fa-solid fa-briefcase"></i>
+          <input type="text" placeholder="Job Title or Company" required />
+        </div>
+        <div class="input-group">
+          <i class="fa-solid fa-location-dot"></i>
+          <input type="text" placeholder="Location (e.g., Mumbai)" />
+        </div>
+        <button type="submit" class="search-btn">
+          <i class="fa-solid fa-magnifying-glass"></i> Search
+        </button>
+      </form>
+    </section>
+  </section>
 
   <section class="features">
     <h2>Why Choose Job Cloud?</h2>
@@ -76,66 +75,12 @@
   <section class="job-categories">
     <h2>Find the right job or internship for you</h2>
     <div class="category-tags">
-      <span>Engineering</span><span>Business Development</span><span>Finance</span><span>Administrative Assistant</span>
-      <span>Retail Associate</span><span>Customer Service</span><span>Operations</span><span>Information Technology</span>
-      <span>Marketing</span><span>Human Resources</span><span>Healthcare Service</span><span>Sales</span>
-      <span>Program and Project Management</span><span>Accounting</span><span>Arts and Design</span>
-      <span>Community and Social Services</span><span>Consulting</span><span>Education</span>
-      <span>Entrepreneurship</span><span>Legal</span><span>Media and Communications</span>
-      <span>Military and Protective Services</span><span>Product Management</span>
-      <span>Purchasing</span><span>Quality Assurance</span><span>Real Estate</span>
-      <span>Research</span><span>Support</span><span>Administrative</span>
-    </div>
-  </section>
-
-  <!-- ✅ Search box for filtering jobs -->
-  <section class="job-search">
-    <div class="job-search-container">
-    </div>
-  </section>
-
-  <section class="job-listings">
-    <h2>Latest Job Openings</h2>
-    <div class="job-cards">
-      <div class="job-card">
-        <h3>Software Engineer</h3>
-        <p>Google • Bengaluru</p>
-        <div class="job-tags"><span class="job-tag">Full-time</span><span class="job-tag">Hybrid</span></div>
-        <button class="apply-btn">Apply Now</button>
-      </div>
-      <div class="job-card">
-        <h3>UI/UX Designer</h3>
-        <p>Adobe • Remote</p>
-        <div class="job-tags"><span class="job-tag">Full-time</span><span class="job-tag">Remote</span></div>
-        <button class="apply-btn">Apply Now</button>
-      </div>
-      <div class="job-card">
-        <h3>Data Analyst</h3>
-        <p>Amazon • Hyderabad</p>
-        <div class="job-tags"><span class="job-tag">Part-time</span><span class="job-tag">On-site</span></div>
-        <button class="apply-btn">Apply Now</button>
-      </div>
-    </div>
-
-    <div class="extra-jobs" id="more-jobs">
-      <div class="job-card">
-        <h3>Marketing Intern</h3>
-        <p>Flipkart • Mumbai</p>
-        <div class="job-tags"><span class="job-tag">Internship</span><span class="job-tag">On-site</span></div>
-        <button class="apply-btn">Apply Now</button>
-      </div>
-      <div class="job-card">
-        <h3>Technical Writer</h3>
-        <p>Zoho • Chennai</p>
-        <div class="job-tags"><span class="job-tag">Remote</span></div>
-        <button class="apply-btn">Apply Now</button>
-      </div>
-    </div>
-
-    <div class="show-more-container">
-      <button onclick="document.getElementById('more-jobs').classList.toggle('show'); this.style.display='none';" class="show-more">
-        View More <i class="fa-solid fa-angle-down"></i>
-      </button>
+      <span>Engineering</span>
+      <span>Finance</span>
+      <span>Information Technology</span>
+      <span>Marketing</span>
+      <span>Product Management</span>
+      <span>Accounting</span>
     </div>
   </section>
 
@@ -166,10 +111,6 @@
   <footer>
     <div class="footer-content">
       <p>&copy; 2024 Job Cloud. All rights reserved.</p>
-      <form class="newsletter">
-        <input type="email" placeholder="Subscribe via Email" />
-        <button type="submit">Subscribe</button>
-      </form>
       <div class="social-icons">
         <a href="#"><i class="fa-brands fa-instagram"></i></a>
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -185,32 +126,5 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
 </body>
-  
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
