--- a/index.html
+++ b/index.html
@@ -73,16 +73,18 @@
     </div>
   </section>
 
-  <section class="job-categories">
-    <h2>Find the right job or internship for you</h2>
-    <div class="category-tags">
-      <span>Engineering</span><span>Finance</span>
-     <span>Information Technology</span>
-      <span>Marketing</span>
-      <span>Accounting</span><span>Product Management</span>
-      
-    </div>
-  </section>
+  <section class="categories">
+  <h2>Find the right job or internship for you</h2>
+  <div class="category-list">
+    <a href="engineering-jobs.html" class="category-card">Engineering</a>
+    <a href="it-jobs.html" class="category-card">IT</a>
+    <a href="marketing-jobs.html" class="category-card">Marketing</a>
+    <a href="finance-jobs.html" class="category-card">Finance</a>
+    <a href="design-jobs.html" class="category-card">Design</a>
+    <a href="management-jobs.html" class="category-card">Management</a>
+  </div>
+</section>
+
 
   <section class="testimonials">
     <h2>What Our Users Say</h2>
