--- a/index.html
+++ b/index.html
@@ -76,26 +76,15 @@
   <section class="categories">
   <h2>Find the right job or internship for you</h2>
   <div class="category-list">
-    <div class="category-card">
-      <a href="engineering-jobs.html">Engineering</a>
-    </div>
-    <div class="category-card">
-      <a href="it-jobs.html">IT</a>
-    </div>
-    <div class="category-card">
-      <a href="marketing-jobs.html">Marketing</a>
-    </div>
-    <div class="category-card">
-      <a href="finance-jobs.html">Finance</a>
-    </div>
-    <div class="category-card">
-      <a href="design-jobs.html">Design</a>
-    </div>
-    <div class="category-card">
-      <a href="management-jobs.html">Management</a>
-    </div>
+    <a href="engineering-jobs.html" class="category-card">Engineering</a>
+    <a href="it-jobs.html" class="category-card">IT</a>
+    <a href="marketing-jobs.html" class="category-card">Marketing</a>
+    <a href="finance-jobs.html" class="category-card">Finance</a>
+    <a href="design-jobs.html" class="category-card">Design</a>
+    <a href="management-jobs.html" class="category-card">Management</a>
   </div>
 </section>
+
 
 
 
