--- a/engineering-jobs.html
+++ b/engineering-jobs.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Engineering Jobs - Job Cloud</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Engineering Jobs - Job Cloud</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
-  <header>
-    <h1>Available Engineering Jobs</h1>
-  </header>
 
-  <main>
-    <div class="job-list">
-      <div class="job-card">
-        <h3>Software Engineer - Google</h3>
-        <p>Location: Bangalore</p>
-        <p>Skills: Java, Data Structures</p>
-      </div>
+    <nav>
+        </nav>
 
-      <div class="job-card">
-        <h3>Mechanical Engineer - TCS</h3>
-        <p>Location: Pune</p>
-        <p>Skills: CAD, SolidWorks</p>
-      </div>
-
-      <div class="job-card">
-        <h3>Civil Engineer - Infosys</h3>
-        <p>Location: Hyderabad</p>
-        <p>Skills: AutoCAD, Project Management</p>
-      </div>
+    <div class="job-listings">
+        <h2>Engineering Job Openings</h2>
+        <div class="job-card">
+            </div>
     </div>
-  </main>
-</body>
+
+    </body>
 </html>
