--- a/engineering-jobs.html
+++ b/engineering-jobs.html
@@ -1,22 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Engineering Jobs - Job Cloud</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
-
     <nav>
-        </nav>
-
-    <div class="job-listings">
+        <div class="logo"><img src="jobcloud12.png" alt="Job Cloud Logo" /></div>
+        <text>Job Cloud</text>
+        <div class="connections"><a href="index.html">← Back to Home</a></div>
+    </nav>
+    <section class="job-listings">
         <h2>Engineering Job Openings</h2>
-        <div class="job-card">
+        <div class="job-list-container">
+            <div class="job-card">
+                <img src="https://via.placeholder.com/60" alt="Company Logo" class="company-logo">
+                <div class="job-details">
+                    <h3>Software Engineer</h3>
+                    <p>Company: Tech Corp • Bengaluru</p>
+                    <p>On-site • Full-time • 3+ Years Exp</p>
+                </div>
+                <button class="apply-btn">Apply</button>
             </div>
-    </div>
-
-    </body>
+            <div class="job-card">
+                <img src="https://via.placeholder.com/60" alt="Company Logo" class="company-logo">
+                <div class="job-details">
+                    <h3>Mechanical Engineer</h3>
+                    <p>Company: Innovate Motors • Pune</p>
+                    <p>On-site • Full-time • 5+ Years Exp</p>
+                </div>
+                <button class="apply-btn">Apply</button>
+            </div>
+            <div class="job-card">
+                <img src="https://via.placeholder.com/60" alt="Company Logo" class="company-logo">
+                <div class="job-details">
+                    <h3>Electrical Engineer</h3>
+                    <p>Company: Power Systems • Chennai</p>
+                    <p>On-site • Full-time • 4+ Years Exp</p>
+                </div>
+                <button class="apply-btn">Apply</button>
+            </div>
+            <div class="job-card">
+                <img src="https://via.placeholder.com/60" alt="Company Logo" class="company-logo">
+                <div class="job-details">
+                    <h3>Civil Engineer</h3>
+                    <p>Company: Urban Builders • Mumbai</p>
+                    <p>On-site • Full-time • 6+ Years Exp</p>
+                </div>
+                <button class="apply-btn">Apply</button>
+            </div>
+            <div class="job-card">
+                <img src="https://via.placeholder.com/60" alt="Company Logo" class="company-logo">
+                <div class="job-details">
+                    <h3>Aerospace Engineer</h3>
+                    <p>Company: Aero Dynamics • Hyderabad</p>
+                    <p>Hybrid • Full-time • 7+ Years Exp</p>
+                </div>
+                <button class="apply-btn">Apply</button>
+            </div>
+        </div>
+    </section>
+</body>
 </html>
