--- a/index.html
+++ b/index.html
@@ -73,16 +73,19 @@
     </div>
   </section>
 
-  <section class="job-categories">
-    <h2>Find the right job or internship for you</h2>
-    <div class="category-tags">
-      <span>Engineering</span><span>Finance</span>
-     <span>Information Technology</span>
-      <span>Marketing</span>
-      <span>Accounting</span><span>Product Management</span>
-      
-    </div>
-  </section>
+  <section class="job-section">
+  <h2>Find the right job or internship for you</h2>
+  <div class="job-categories">
+    <button class="job-btn" data-category="engineering">Engineering</button>
+    <button class="job-btn" data-category="finance">Finance</button>
+    <button class="job-btn" data-category="it">Information Technology</button>
+    <button class="job-btn" data-category="marketing">Marketing</button>
+    <button class="job-btn" data-category="accounting">Accounting</button>
+    <button class="job-btn" data-category="product">Product Management</button>
+  </div>
+  <div id="job-list" class="job-list"></div>
+</section>
+
 
   <section class="testimonials">
     <h2>What Our Users Say</h2>
@@ -131,3 +134,4 @@
 
 </body>
 </html>
+
