--- a/index.html
+++ b/index.html
@@ -73,16 +73,18 @@
     </div>
   </section>
 
-  <section class="job-section">
+<section class="job-section">
   <h2>Find the right job or internship for you</h2>
   <div class="job-categories">
-    <button class="job-btn" data-category="engineering">Engineering</button>
-    <button class="job-btn" data-category="finance">Finance</button>
-    <button class="job-btn" data-category="it">Information Technology</button>
-    <button class="job-btn" data-category="marketing">Marketing</button>
-    <button class="job-btn" data-category="accounting">Accounting</button>
-    <button class="job-btn" data-category="product">Product Management</button>
+    <div class="job-btn" data-category="engineering">Engineering</div>
+    <div class="job-btn" data-category="finance">Finance</div>
+    <div class="job-btn" data-category="it">Information Technology</div>
+    <div class="job-btn" data-category="marketing">Marketing</div>
+    <div class="job-btn" data-category="accounting">Accounting</div>
+    <div class="job-btn" data-category="product">Product Management</div>
   </div>
+
+  <!-- Job list container -->
   <div id="job-list" class="job-list"></div>
 </section>
 
@@ -202,5 +204,6 @@ jobButtons.forEach(btn => {
 
 </body>
 </html>
+
 
 
