--- a/index.html
+++ b/index.html
@@ -73,21 +73,16 @@
     </div>
   </section>
 
-<section class="job-section">
-  <h2>Find the right job or internship for you</h2>
-  <div class="job-categories">
-    <div class="job-btn" data-category="engineering">Engineering</div>
-    <div class="job-btn" data-category="finance">Finance</div>
-    <div class="job-btn" data-category="it">Information Technology</div>
-    <div class="job-btn" data-category="marketing">Marketing</div>
-    <div class="job-btn" data-category="accounting">Accounting</div>
-    <div class="job-btn" data-category="product">Product Management</div>
-  </div>
-
-  <!-- Job list container -->
-  <div id="job-list" class="job-list"></div>
-</section>
-
+  <section class="job-categories">
+    <h2>Find the right job or internship for you</h2>
+    <div class="category-tags">
+      <span>Engineering</span><span>Finance</span>
+     <span>Information Technology</span>
+      <span>Marketing</span>
+      <span>Accounting</span><span>Product Management</span>
+      
+    </div>
+  </section>
 
   <section class="testimonials">
     <h2>What Our Users Say</h2>
@@ -133,74 +128,6 @@
     </div>
   </footer>
 <script src="search.js"></script>
-<script>
-  const jobs = {
-  engineering: [
-    "Software Engineer - Google",
-    "Mechanical Engineer - Tata",
-    "Civil Engineer - L&T",
-    "Electrical Engineer - Siemens",
-    "Design Engineer - Infosys",
-    "Quality Engineer - Wipro"
-  ],
-  finance: [
-    "Financial Analyst - Deloitte",
-    "Investment Banker - HDFC",
-    "Tax Consultant - PwC",
-    "Account Manager - ICICI",
-    "Equity Research Analyst - Kotak",
-    "Risk Analyst - Axis Bank"
-  ],
-  it: [
-    "Full Stack Developer - Microsoft",
-    "Backend Developer - Amazon",
-    "Frontend Developer - Zoho",
-    "Data Scientist - IBM",
-    "DevOps Engineer - Infosys",
-    "AI Engineer - TCS"
-  ],
-  marketing: [
-    "Digital Marketing Executive - Flipkart",
-    "SEO Specialist - Zomato",
-    "Content Marketer - Swiggy",
-    "Brand Manager - HUL",
-    "Social Media Manager - Nykaa",
-    "PPC Analyst - Amazon"
-  ],
-  accounting: [
-    "Chartered Accountant - KPMG",
-    "Auditor - EY",
-    "Finance Executive - Deloitte",
-    "Payroll Specialist - Accenture",
-    "Accounts Payable Clerk - Infosys",
-    "Tax Analyst - PwC"
-  ],
-  product: [
-    "Product Manager - Google",
-    "Associate PM - Microsoft",
-    "Technical PM - Amazon",
-    "Product Analyst - Flipkart",
-    "Junior PM - Byju's",
-    "Product Strategist - Nykaa"
-  ]
-};
-
-const jobButtons = document.querySelectorAll(".job-btn");
-const jobList = document.getElementById("job-list");
-
-jobButtons.forEach(btn => {
-  btn.addEventListener("click", () => {
-    const category = btn.getAttribute("data-category");
-    const jobItems = jobs[category]
-      .map(job => `<div class="job-card">${job}</div>`)
-      .join("");
-    jobList.innerHTML = jobItems;
-  });
-});
-
-</script>
-</body>
-</html>
 
 </body>
 </html>
