--- a/signup.html
+++ b/signup.html
@@ -65,16 +65,39 @@
 <body>
   <div class="signup-container">
     <h2>Create Your Account</h2>
-    <form>
-      <input type="text" placeholder="Full Name" required>
-      <input type="tel" placeholder="Mobile Number" pattern="[0-9]{10}" required>
-      <input type="date" required>
-      <input type="email" placeholder="Email Address" required>
-      <input type="password" placeholder="Password" required>
+    <form id="signupForm">
+      <input type="text" id="fullname" placeholder="Full Name" required>
+      <input type="tel" id="mobile" placeholder="Mobile Number" pattern="[0-9]{10}" required>
+      <input type="date" id="dob" required>
+      <input type="email" id="email" placeholder="Email Address" required>
+      <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Sign Up</button>
     </form>
+
+    <script>
+      document.getElementById("signupForm").addEventListener("submit", async function(e) {
+        e.preventDefault(); // prevent page reload
+
+        const userData = {
+          fullname: document.getElementById("fullname").value,
+          mobile: document.getElementById("mobile").value,
+          dob: document.getElementById("dob").value,
+          email: document.getElementById("email").value,
+          password: document.getElementById("password").value
+        };
+
+        const res = await fetch("http://localhost:5000/signup", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(userData)
+        });
+
+        const data = await res.text();
+        alert(data);
+      });
+    </script>
+
     <a href="login.html">Already have an account? Login</a>
   </div>
 </body>
 </html>
-
