--- a/information-technology.html
+++ b/information-technology.html
@@ -24,7 +24,7 @@
 <section class="job-cards-container">
     <div class="job-card">
         <div class="logo">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Tata_Consultancy_Services_Logo.svg/1200px-Tata_Consultancy_Services_Logo.svg.png" alt="TCS Logo">
+          <img src="tcslogo.png" alt="TCS Logo">
         </div>
         <div class="details">
             <h3>Java Developer</h3>
@@ -40,7 +40,7 @@
 
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Tata_Consultancy_Services_Logo.svg/1200px-Tata_Consultancy_Services_Logo.svg.png" alt="TCS Logo">
+            <img src="tcslogo.png" alt="TCS Logo">
         </div>
         <div class="details">
             <h3>Data Engineer</h3>
@@ -56,7 +56,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Tata_Consultancy_Services_Logo.svg/1200px-Tata_Consultancy_Services_Logo.svg.png" alt="TCS Logo">
+            <img src="tcslogo.png" alt="TCS Logo">
         </div>
         <div class="details">
             <h3>Business Analyst</h3>
