--- a/information-technology.html
+++ b/information-technology.html
@@ -72,7 +72,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Google_Cloud_logo.svg/1200px-Google_Cloud_logo.svg.png" alt="Google Cloud Logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google Cloud Logo">
         </div>
         <div class="details">
             <h3>Cloud Architect</h3>
@@ -120,7 +120,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Oracle_logo.svg/2560px-Oracle_logo.svg.png" alt="Oracle Logo">
+            <img src="https://tse2.mm.bing.net/th/id/OIP.Kq54QSbhathL_7-5mQALtAHaEK?pid=Api&P=0&h=180" alt="Oracle Logo">
         </div>
         <div class="details">
             <h3>Database Administrator</h3>
