--- a/engineering.html
+++ b/engineering.html
@@ -24,7 +24,7 @@
 <section class="job-cards-container">
     <div class="job-card">
         <div class="logo">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Honeywell_logo_2020.svg/2560px-Honeywell_logo_2020.svg.png" alt="Honeywell Logo">
+          <img src="https://tse3.mm.bing.net/th/id/OIP.wTTJzPfZUK8967z_Ul0rzgHaBq?pid=Api&P=0&h=180" alt="Honeywell Logo">
         </div>
         <div class="details">
             <h3>Mechanical Engineer</h3>
@@ -40,7 +40,7 @@
 
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Larsen_%26_Toubro_Logo.svg" alt="L&T Logo">
+            <img src="https://tse1.mm.bing.net/th/id/OIP.-szSb6FYheUXCJ9JiLAt6wHaFh?pid=Api&P=0&h=180" alt="L&T Logo">
         </div>
         <div class="details">
             <h3>Civil Engineer</h3>
@@ -56,7 +56,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Siemens_logo.svg/2560px-Siemens_logo.svg.png" alt="Siemens Logo">
+            <img src="https://tse3.mm.bing.net/th/id/OIP.2_L1xUgdf-vc5YlkZJ2uBAHaEK?pid=Api&P=0&h=180" alt="Siemens Logo">
         </div>
         <div class="details">
             <h3>Electrical Engineer</h3>
@@ -72,7 +72,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Bosch-Logo-Schriftzug.svg" alt="Bosch Logo">
+            <img src="https://tse2.mm.bing.net/th/id/OIP.p2iwOwojwO0jjhM03aM3qgHaDz?pid=Api&P=0&h=180" alt="Bosch Logo">
         </div>
         <div class="details">
             <h3>Robotics Engineer</h3>
