--- a/finance.html
+++ b/finance.html
@@ -24,7 +24,7 @@
 <section class="job-cards-container">
     <div class="job-card">
         <div class="logo">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Goldman_Sachs.svg/1280px-Goldman_Sachs.svg.png" alt="Goldman Sachs Logo">
+          <img src="https://tse4.mm.bing.net/th/id/OIP.20UZG_OJdxb6vdhuboZ1vgHaEK?pid=Api&P=0&h=180" alt="Goldman Sachs Logo">
         </div>
         <div class="details">
             <h3>Financial Analyst</h3>
@@ -40,7 +40,7 @@
 
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Morgan_Stanley_Logo_2020.svg/1200px-Morgan_Stanley_Logo_2020.svg.png" alt="Morgan Stanley Logo">
+            <img src="https://tse2.mm.bing.net/th/id/OIP.6WwKJytohpaCYYmCIiG2-QHaFj?pid=Api&P=0&h=180" alt="Morgan Stanley Logo">
         </div>
         <div class="details">
             <h3>Investment Banking Associate</h3>
@@ -56,7 +56,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/JPMorgan_Chase_logo_2020.svg/1200px-JPMorgan_Chase_logo_2020.svg.png" alt="J.P. Morgan Logo">
+            <img src="https://tse4.mm.bing.net/th/id/OIP.ZFVZamQcmRxoIs20Nf1uJwHaHa?pid=Api&P=0&h=180" alt="J.P. Morgan Logo">
         </div>
         <div class="details">
             <h3>Risk Analyst</h3>
@@ -72,7 +72,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Bank_of_America_logo.svg/1200px-Bank_of_America_logo.svg.png" alt="Bank of America Logo">
+            <img src="https://tse3.mm.bing.net/th/id/OIP.iJ-B6muTB2lCU3MdeBbxQgHaEK?pid=Api&P=0&h=180" alt="Bank of America Logo">
         </div>
         <div class="details">
             <h3>Equity Research Associate</h3>
