--- a/accounting.html
+++ b/accounting.html
@@ -24,7 +24,7 @@
 <section class="job-cards-container">
     <div class="job-card">
         <div class="logo">
-          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/91/Deloitte_Logo.svg/1200px-Deloitte_Logo.svg.png" alt="Deloitte Logo">
+          <img src="https://tse2.mm.bing.net/th/id/OIP.I8oa8fJhLHp2SAzMNTD_1wHaBY?pid=Api&P=0&h=180" alt="Deloitte Logo">
         </div>
         <div class="details">
             <h3>Senior Accountant</h3>
@@ -40,7 +40,7 @@
 
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/KPMG_logo.svg/1200px-KPMG_logo.svg.png" alt="KPMG Logo">
+            <img src="https://tse4.mm.bing.net/th/id/OIP.si9r1bNZBwIJmkwZ8kF5LgHaCK?pid=Api&P=0&h=180 " alt="KPMG Logo">
         </div>
         <div class="details">
             <h3>Tax Consultant</h3>
@@ -56,7 +56,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/PricewaterhouseCoopers_Logo.svg/1200px-PricewaterhouseCoopers_Logo.svg.png" alt="PWC Logo">
+            <img src="https://tse3.mm.bing.net/th/id/OIP.WSBI5QzEx4eW-wVsykii1gHaFn?pid=Api&P=0&h=180" alt="PWC Logo">
         </div>
         <div class="details">
             <h3>Auditor</h3>
@@ -72,7 +72,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Ernst_%26_Young_logo.svg/1200px-Ernst_%26_Young_logo.svg.png" alt="EY Logo">
+            <img src="EY Logo" alt="EY Logo">
         </div>
         <div class="details">
             <h3>Financial Controller</h3>
