--- a/accounting.html
+++ b/accounting.html
@@ -72,7 +72,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="EY Logo" alt="EY Logo">
+            <img src="https://tse1.mm.bing.net/th/id/OIP.pwJPOfXCvvLADF0W-dr6swHaHa?pid=Api&P=0&h=180" alt="EY Logo">
         </div>
         <div class="details">
             <h3>Financial Controller</h3>
