--- a/product-management.html
+++ b/product-management.html
@@ -24,7 +24,7 @@
 <section class="job-cards-container">
     <div class="job-card">
         <div class="logo">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Meta_Platforms_logo_no_lettering.svg/2048px-Meta_Platforms_logo_no_lettering.svg.png" alt="Meta Logo">
+          <img src="https://tse2.mm.bing.net/th/id/OIP.WKcD1sNIqkT6hPo1sieqKwHaEK?pid=Api&P=0&h=180" alt="Meta Logo">
         </div>
         <div class="details">
             <h3>Product Manager</h3>
@@ -40,7 +40,7 @@
 
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Adobe_logo_and_wordmark.svg/1200px-Adobe_logo_and_wordmark.svg.png" alt="Adobe Logo">
+            <img src="https://tse1.mm.bing.net/th/id/OIP.s2qnKGj8R9kTsbv6IANlEgHaIe?pid=Api&P=0&h=180" alt="Adobe Logo">
         </div>
         <div class="details">
             <h3>Senior Product Manager</h3>
@@ -72,7 +72,7 @@
     
     <div class="job-card">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Trello_logo.svg/1200px-Trello_logo.svg.png" alt="Trello Logo">
+            <img src="https://tse3.mm.bing.net/th/id/OIP.cbz_E4Xq23ynkljhyMqY9gHaEK?pid=Api&P=0&h=180" alt="Trello Logo">
         </div>
         <div class="details">
             <h3>Associate Product Manager</h3>
