--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="input-group">
           <i class="fa-solid fa-location-dot"></i>
-          <input type="text" id="locationInput" placeholder="Location (e.g., Mumbai)" />
+          <input type="text" placeholder="Location (e.g., Mumbai)" />
         </div>
         <button type="submit" class="search-btn">
           <i class="fa-solid fa-magnifying-glass"></i> Search
