--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="hero">
     <h1>Find Your Dream Job Today</h1>
     <p>Search thousands of jobs from top companies and start your career journey.</p>
-    <a href="#" class="cta-btn">Get Started</a>
+    <a href="login.html" class="cta-btn">Get Started</a>
     <section class="job-posting">
       <form class="search-form" onsubmit="return searchJob(event)">
         <div class="input-group">
@@ -129,6 +129,7 @@
 
 </body>
 </html>
+
 
 
 
