--- a/login.html
+++ b/login.html
@@ -3,96 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Job Cloud - Login</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #6a11cb, #2575fc);
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .login-container {
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      width: 100%;
-      max-width: 350px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      text-align: center;
-    }
-    .login-container h2 {
-      margin-bottom: 20px;
-      color: #333;
-    }
-    .login-container input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 14px;
-    }
-    .login-container button {
-      width: 100%;
-      padding: 12px;
-      background: #2575fc;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    .login-container button:hover {
-      background: #1a5ed1;
-    }
-    .login-container a {
-      display: block;
-      margin-top: 12px;
-      text-decoration: none;
-      color: #2575fc;
-      font-size: 14px;
-    }
-    .login-container a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Login - JobCloud</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login to Job Cloud</h2>
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="Enter your email" required>
-      <input type="password" id="password" placeholder="Enter your password" required>
-      <button type="submit">Login</button>
-    </form>
+  <h1>Login</h1>
+  <form id="login-form" class="auth-form">
+    <input id="email" type="email" placeholder="Email" required>
+    <input id="password" type="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+  </form>
 
-    <script>
-      document.getElementById("loginForm").addEventListener("submit", async function(e) {
-        e.preventDefault();
-
-        const loginData = {
-          email: document.getElementById("email").value,
-          password: document.getElementById("password").value
-        };
-
-        const res = await fetch("http://localhost:5000/login", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(loginData)
-        });
-
-        const data = await res.text(); 
-        alert(data);
-      });
-    </script>
-
-    <a href="#">Forgot Password?</a>
-    <a href="signup.html">New User? Sign Up</a>
-  </div>
+  <script src="login.js"></script>
 </body>
 </html>
+
