--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Create Account</h1>
   <form id="signup-form" class="auth-form">
-    <input id="fullName" type="text" placeholder="Full Name" required>
+    <input id="name" type="text" placeholder="Name" required>   <!-- changed -->
     <input id="email" type="email" placeholder="Email" required>
     <input id="password" type="password" placeholder="Password" required>
     <button type="submit">Sign Up</button>
